recursion.logo.spiral.SpiralUse.scala.error
Erreur de compilation :
SpiralUse:3: error: type mismatch;
 found   : Double(0.5)
 required: Int
    spiral(100,90,1,0.5);
                    ^